Fixed bug with unwanted scrollbars showing

--- a/client/layout/main/main.less
+++ b/client/layout/main/main.less
@@ -55,6 +55,8 @@ blockquote {
   left: @sidebar-width;
   right:0;
   overflow-x:hidden;
+  overflow-y:visible;
+  min-height: 90%;
   padding: 4px 22px 30px;
   transition: all 0.15s ease-in-out;
   box-sizing: border-box;
